--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <!-- /.col-md -->
                 <div class="col-md d-flex justify-content-end align-items-center p-0 m-0 nav-item-sign">
                     <ul class="top-nav_menu">
-                        <li><a href="#"> Sign In </a></li>
+                        <!-- <li><a href="#"> Sign In </a></li> -->
                         <li><a href="#" class="active"> Sign Up </a></li>
                     </ul>
                 </div>
@@ -142,68 +142,85 @@
             <div class="row">
                 <div class="col-md d-flex justify-content-center">
                     <div class="heading__text">
-                        <p>Your time isn’t scalable. Your team probably is. <br>
-                          Free up your time to focus on what matters. Skillsquare HR tools will help you
-                          scale your team.
+                        <p>Your time isn’t scalable. Your team probably is. <br> Free up your time to focus on what matters. Skillsquare HR tools will help you scale your team.
                         </p>
                     </div>
                 </div>
             </div>
-         <div class="row">
-            <div class="col">
-              <div class="item-container">
-                <div class="icon-container">
-                    <img class="icon-benefits" src="./img/icon.staffing.svg" alt="Staffing Icon">
+            <div class="row">
+                <div class="col">
+                    <div class="item-container">
+                        <div class="icon-container">
+                            <img class="icon-benefits" src="./img/icon.staffing.svg" alt="Staffing Icon">
+                        </div>
+                        <div class="text-container better-block__list-text">
+                            <h4>Staffing Software</h4>
+                            <div class="text-position">
+                                <p>
+                                    List, sort and compare CV, make notes, set statuses. Never miss a single detail while hiring.
+                                </p>
+                            </div>
+
+                            <div class="learn-more">
+                                <div>
+                                    <p>Learn more</p>
+                                </div>
+                                <div>
+                                    <p>&#x2192</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="text-container better-block__list-text">
-                  <h4>Staffing Software</h4>
-                  <p>
-                    List, sort and compare CV, make notes, set statuses. Never miss
-                    a single detail while hiring.
-                  </p>
-                  <div class="learn-more">
-                    <div><p>Learn more</p></div>
-                    <div><p>&#x2192</p></div>
-                  </div>
+                <div class="col">
+                    <div class="item-container">
+                        <div class="icon-container">
+                            <img class="icon-benefits" src="./img/icon.time.tracking.svg" alt="Time Tracking Icon">
+                        </div>
+                        <div class="text-container better-block__list-text">
+                            <h4>Employee Time Tracking</h4>
+                            <div class="text-position">
+                                <p>
+                                    Track employee time, attendance, accept or reject time off.
+                                </p>
+                            </div>
+
+                            <div class="learn-more">
+                                <div>
+                                    <p>Learn more</p>
+                                </div>
+                                <div>
+                                    <p>&#x2192</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+                <div class="col">
+                    <div class="item-container">
+                        <div class="icon-container">
+                            <img class="icon-benefits" src="./img/icon.vacation.mamagement.svg" alt="Vacation Management Icon">
+                        </div>
+                        <div class="text-container better-block__list-text">
+                            <h4>Vacation Management</h4>
+                            <div class="text-position">
+                                <p>
+                                    oportere patrioque sit et, eum ne prima nemore perfecto. Eu cibo quidam eleifend per.
+                                </p>
+                            </div>
+
+                            <div class="learn-more">
+                                <div>
+                                    <p>Learn more</p>
+                                </div>
+                                <div>
+                                    <p>&#x2192</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col">
-              <div class="item-container">
-                <div class="icon-container">
-                    <img class="icon-benefits" src="./img/icon.time.tracking.svg" alt="Time Tracking Icon">
-                </div>
-                <div class="text-container better-block__list-text">
-                  <h4>Employee Time Tracking</h4>
-                  <p>
-                    Track employee time, attendance, accept or reject time off.
-                  </p>
-                  <div class="learn-more">
-                    <div><p>Learn more</p></div>
-                    <div><p>&#x2192</p></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="item-container">
-                <div class="icon-container">
-                    <img class="icon-benefits" src="./img/icon.vacation.mamagement.svg" alt="Vacation Management Icon">
-                </div>
-                <div class="text-container better-block__list-text">
-                  <h4>Vacation Management</h4>
-                  <p>
-                    oportere patrioque sit et, eum ne prima nemore perfecto. Eu cibo
-                    quidam eleifend per.
-                  </p>
-                  <div class="learn-more">
-                    <div><p>Learn more</p></div>
-                    <div><p>&#x2192</p></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="feeback-block">
@@ -317,70 +334,71 @@
 
 
         <footer class="footer ">
-            <div class="footer-nav ">
-                <div class="row ">
-                    <div class="footer-content col-md d-flex justify-content-between ">
-                        <div class="col-md-auto footer-content-item ">
-                            <h3 class="footer-content-item-header ">Features</h3>
-                            <ul>
-                                <li><a href="# ">Staffing</a></li>
-                                <li><a href="# ">Employee records</a></li>
-                                <li><a href="# ">Leaves management</a></li>
-                                <li><a href="# ">Time tracking</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-auto footer-content-item ">
-                            <h3 class="footer-content-item-header ">For Companies</h3>
-                            <ul>
-                                <li>Browse Resumes</li>
-                                <li>Trust & Safety</li>
-                                <li>FAQ</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-auto footer-content-item ">
-                            <h3 class="footer-content-item-header ">For Job Seekers</h3>
-                            <ul>
-                                <li>Member Benefits</li>
-                                <li>Open Vacancies</li>
-                                <li>Submit CV</li>
-                            </ul>
-                        </div>
 
-                        <div class="col-md-auto footer-content-item ">
-                            <h3 class="footer-content-item-header ">Skillsquare</h3>
-                            <ul>
-                                <li>About</li>
-                                <li>Contact</li>
-                                <li>News</li>
-                            </ul>
-                        </div>
+            <div class="row footer-content">
+                <div class="col-md-8 d-flex justify-content-between">
+                    <div class="col-md-auto footer-content-item ">
+                        <h3 class="footer-content-item-header ">Features</h3>
+                        <ul>
+                            <li><a href="# ">Staffing</a></li>
+                            <li><a href="# ">Employee records</a></li>
+                            <li><a href="# ">Leaves management</a></li>
+                            <li><a href="# ">Time tracking</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-auto footer-content-item ">
+                        <h3 class="footer-content-item-header ">For Companies</h3>
+                        <ul>
+                            <li>Browse Resumes</li>
+                            <li>Trust & Safety</li>
+                            <li>FAQ</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-auto footer-content-item ">
+                        <h3 class="footer-content-item-header ">For Job Seekers</h3>
+                        <ul>
+                            <li>Member Benefits</li>
+                            <li>Open Vacancies</li>
+                            <li>Submit CV</li>
+                        </ul>
+                    </div>
 
-                        <div class="footer-content-item col-md ">
-                            <div class="d-flex justify-content-end ">
-                                <img src="./img/lang-icon.png " alt="lang-icon" class="lang-img" />
-                                <select size="1 " class="lang-select " name=" " id=" ">
-                  <option value="Eng ">English</option>
-                  <option value="Ger ">German</option>
-                </select>
-                            </div>
-                        </div>
+                    <div class="col-md-auto footer-content-item ">
+                        <h3 class="footer-content-item-header ">Skillsquare</h3>
+                        <ul>
+                            <li>About</li>
+                            <li>Contact</li>
+                            <li>News</li>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="row ">
-                    <div class="col-md footer-footer d-flex justify-content-between ">
-                        <div>
-                            <img src="./img/Footer-Logotype.png " alt="Logo " />
-                        </div>
-                        <p>2019 Term of service | Privacy</p>
-                        <div>
-                            <img src="./img/fb.png " alt="fb_logo " />
-                            <img src="./img/LinkidnIcon.png " alt="link_logo " style="margin: 0 26px; " />
-                        </div>
+
+                <div class="footer-content-item col-md-4 ">
+                    <div class="d-flex justify-content-end ">
+                        <img src="./img/lang-icon.png " alt="lang-icon" class="lang-img" />
+                        <select size="1 " class="lang-select " name=" " id=" ">
+                                    <option value="Eng ">English</option>
+                                    <option value="Ger ">German</option>
+                                </select>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row ">
+                <div class="col-md footer-footer d-flex justify-content-between ">
+                    <div>
+                        <img src="./img/Footer-Logotype.png " alt="Logo " />
+                    </div>
+                    <p>2019 Term of service | Privacy</p>
+                    <div>
+                        <img src="./img/fb.png " alt="fb_logo " />
+                        <img src="./img/LinkidnIcon.png " alt="link_logo " style="margin: 0 26px; " />
                     </div>
                 </div>
             </div>
-            <!-- /.footer-nav -->
+
         </footer>
     </div>
 
