--- a/index.html
+++ b/index.html
@@ -12,46 +12,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="top-nav">
-            <div class="row ">
-                <div class="col-md-auto p-0">
-                    <div class="logo">
-                        <img src="./img/Logotype.png" alt="Logo" />
-                    </div>
-                </div>
-                <!-- .col-md -->
-                <div class="top-nav_menu col-md-auto pl-0 pr-0 d-flex">
-                    <div class="nav-item d-flex justify-content-center align-items-center">
-
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Features
-                            </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Staffing</a>
-                            <a class="dropdown-item" href="#">Employee records</a>
-                            <a class="dropdown-item" href="#">Leaves Management</a>
-                            <a class="dropdown-item link-click" href="#">Time tracking</a>
-                        </div>
-
-                        <!-- <a href="#"> Features </a> -->
-                    </div>
-                    <div class="nav-item d-flex justify-content-center align-items-center">
-                        <a href="#"> Browse resume </a>
-                    </div>
-                    <div class="nav-item d-flex justify-content-center align-items-center">
-                        <a href="#"> FAQ </a>
-                    </div>
-                </div>
-                <!-- /.col-md -->
-                <div class="col-md d-flex justify-content-end align-items-center p-0 m-0 nav-item-sign">
-                    <ul class="top-nav_menu">
-                        <!-- <li><a href="#"> Sign In </a></li> -->
-                        <li><a href="#" class="active"> Sign Up </a></li>
-                    </ul>
-                </div>
-                <!-- /.col-md -->
-            </div>
-        </div>
+        
 
         <div class="heading-block text-center">
             <div class="row">
@@ -401,6 +362,25 @@
 
 
         <div class="sign-up-block">
+            <div class="row sign-up-block ">
+                <div class="sign-up-block col-md">
+                    <div class="sign-up-block__content ">
+                        <h3 class="sign-up-block-header ">Get started in seconds</h3>
+                        <div class="offset-1 col-md-10">
+                            <p class="text-center sign-up-block-text">
+                                Skillsquare is supposed to be a forever-free tool for startup founders and CEOs to save their time while hiring and managing remote teams. It's pretty simple. Give it a try.
+                            </p>
+                        </div>
+                        
+                        <div class="btn-block ">
+                            <a href="#" class="btn btn-light btn-white-safe ">Sign up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+		
+		<div class="sign-up-block">
             <div class="row sign-up-block ">
                 <div class="sign-up-block col-md">
                     <div class="sign-up-block__content ">
