--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </div>
         </div>
 		
-		<div class="sign-up-block">
+		<!-- <div class="sign-up-block">
             <div class="row sign-up-block ">
                 <div class="sign-up-block col-md">
                     <div class="sign-up-block__content ">
@@ -397,7 +397,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
         <footer class="footer ">
@@ -614,11 +614,6 @@
             })
 
         })
-
-
-       
-
-
     </script>
 </body>
 
