--- a/index.html
+++ b/index.html
@@ -12,7 +12,46 @@
 
 <body>
     <div class="container-fluid">
-        
+        <div class="top-nav">
+            <div class="row ">
+                <div class="col-md-auto p-0">
+                    <div class="logo">
+                        <img src="./img/Logotype.png" alt="Logo" />
+                    </div>
+                </div>
+                <!-- .col-md -->
+                <div class="top-nav_menu col-md-auto pl-0 pr-0 d-flex">
+                    <div class="nav-item d-flex justify-content-center align-items-center">
+
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Features
+                            </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Staffing</a>
+                            <a class="dropdown-item" href="#">Employee records</a>
+                            <a class="dropdown-item" href="#">Leaves Management</a>
+                            <a class="dropdown-item link-click" href="#">Time tracking</a>
+                        </div>
+
+                        <!-- <a href="#"> Features </a> -->
+                    </div>
+                    <div class="nav-item d-flex justify-content-center align-items-center">
+                        <a href="#"> Browse resume </a>
+                    </div>
+                    <div class="nav-item d-flex justify-content-center align-items-center">
+                        <a href="#"> FAQ </a>
+                    </div>
+                </div>
+                <!-- /.col-md -->
+                <div class="col-md d-flex justify-content-end align-items-center p-0 m-0 nav-item-sign">
+                    <ul class="top-nav_menu">
+                        <!-- <li><a href="#"> Sign In </a></li> -->
+                        <li><a href="#" class="active"> Sign Up </a></li>
+                    </ul>
+                </div>
+                <!-- /.col-md -->
+            </div>
+        </div>
 
         <div class="heading-block text-center">
             <div class="row">
